# DOAS_projekt

./: BMPReader.cpp  BMPReader.h  CMakeLists.txt  CompressionResult.cpp  CompressionResult.h  Filters.cpp  Filters.h  Heuristics.cpp  Heuristics.h  ImageWidget.cpp  ImageWidget.h  PNGWriter.cpp  PNGWriter.h  ResultImageWidget.cpp  ResultImageWidget.h  Util.cpp  Util.h  main.cpp
